Fix alignment of clickable listing items

--- a/version_control/Codurance_September2020/css/modules/clickable-listing.css
+++ b/version_control/Codurance_September2020/css/modules/clickable-listing.css
@@ -22,6 +22,7 @@
     align-items: center;
     align-self: start;
     text-decoration: none;
+    height: 10em;
 }
 
 .listing__item:hover {
